--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.1",
-    "mariadb": "^2.5.5"
+    "mariadb": "^2.5.5",
+    "node-schedule": "^2.1.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
