--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.1",
     "mariadb": "^2.5.5",
-    "node-schedule": "^2.1.0"
+    "node-schedule": "^2.1.0",
+    "nodemailer": "^6.7.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
