--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "better-sqlite3": "^7.5.0",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "express": "^4.17.1",
