--- a/package.json
+++ b/package.json
@@ -7,14 +7,26 @@
     "better-sqlite3": "^7.5.0",
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
-    "express": "^4.17.1",
+    "express": "^4.17.3",
     "mariadb": "^2.5.5",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc && cp init.sql ./dist"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/better-sqlite3": "^7.5.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node-schedule": "^1.3.2",
+    "@types/nodemailer": "^6.4.4",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
+    "eslint": "^8.12.0",
+    "typescript": "^4.6.3"
+  }
 }
