--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "nodemailer": "^6.7.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc && cp init.sql ./dist"
+    "test": "jest",
+    "build": "tsc && cp init.sql ./dist/src"
   },
   "author": "",
   "license": "ISC",
@@ -22,11 +22,16 @@
     "@types/better-sqlite3": "^7.5.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/node-schedule": "^1.3.2",
     "@types/nodemailer": "^6.4.4",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "eslint": "^8.12.0",
+    "jest": "^27.5.1",
+    "supertest": "^6.2.2",
+    "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   }
 }
