--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,8 @@
 name: CI
 
 on:
-  push:
+  pull_request:
+    types: [closed]
     branches: [ main ]
 
   workflow_dispatch:
@@ -12,6 +13,7 @@ env:
 
 jobs:
   build-and-push-image:
+    if: github.event.pull_request.merged
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
