--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "test": "jest --verbose dist",
-    "build": "npx tsc",
+    "build": "tsc",
     "build-test": "npm run build && npm run test",
     "server": "node ./dist/src/main.js"
   },
@@ -30,6 +30,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
+    "@types/superagent": "4.1.14",
     "eslint": "^8.12.0",
     "jest": "^27.5.1",
     "supertest": "^6.2.2",
