--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,7 @@
 name: CI
 
 on:
-  pull_request:
-    types: [closed]
+  push:
     branches: [ main ]
 
   workflow_dispatch:
@@ -13,7 +12,6 @@ env:
 
 jobs:
   build-and-push-image:
-    if: github.event.pull_request.merged
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
